fix: enable preview mode in docker container